better comparision approaches in scenario 3 and 6